--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
  * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE) #bd5d38
  */
 :root {
   --blue: #007bff;
@@ -61,9 +61,9 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.8;
   color: #212529;
   text-align: left;
   background-color: #fff;
@@ -10016,8 +10016,8 @@ p.lead {
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
-  font-weight: 800;
-  letter-spacing: 0.05rem;
+  font-weight: 700;
+  letter-spacing: 0.03rem;
   text-transform: uppercase;
 }
 #sideNav .navbar-toggler:focus {
